--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+  <link rel="stylesheet" href="app.css">
 
 <head>
   <meta charset="UTF-8">
@@ -9,13 +10,13 @@
 <body>
   <div class="container"><!-- 1) Add a form that allows you to search. So include search box aka Input -->
   <form>
-    <input type="search", name="search", placeholder="Search Giph", id="search_text">
+    <input type="search", name="search", placeholder="Search Giph", id="search_text", size="40">
     <button id="Search">Search</button>
     <button id="remove">Remove All</button>
     <!-- 2) In that form you will have 2 buttons a) search b) remove all -->
   </form>
   </div>
-  <br>
+ <hr>
 
   <div id="giphies">
 
